# junoscfg

./: .gitignore  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml
data/: request-xml-schema.xml
docs/: edityaml.md  getting-started.md  index.md
docs/api/: anonymize.md  conversion.md  display.md  index.md  validate.md
docs/api/internals/: anonymize_config.md  anonymize_path_filter.md  anonymize_revert.md  anonymize_rules.md  anonymize_walker.md  artifact_builder.md  cli.md  config_store.md  constants.md  convert.md  field_validator.md  grammar_generator.md  input.md  json_yaml_validator.md  schema_generator.md  schema_node.md  set_converter.md  set_validator.md  structured_validator.md  to_yaml.md  validator.md  value_format.md  xml_helpers.md  xml_validator.md  xsd_extractor.md  xsd_fixes.md  xsd_parser.md
docs/architecture/: conversion-bugfix-guide.md  design-decisions.md  developer-guide.md  schema-internals.md
docs/guide/: cli.md  conversion.md  validation.md
private_test_data/: .gitignore  README.md
src/junoscfg/: __init__.py  cli.py  input.py
src/junoscfg/convert/: ir.py  (+2 more)
tests/: conftest.py  integration_test.sh  simple_integration_test.sh  test_artifact_builder.py  test_cli.py  test_cli_validate.py  test_config_store.py  test_convert_api.py  test_convert_consistency.py  test_convert_roundtrip.py  test_delete_operation.py  test_display_filters.py  test_field_validator.py  test_grammar_generator.py  test_input.py  test_integration.py  test_json_yaml_validator.py  test_schema_generator.py  test_schema_node.py  test_set_converter.py  test_set_input.py  test_set_validator.py  test_structured_validator.py  test_to_yaml.py  test_validate_init.py  test_validator.py  test_xml_validator.py  test_xsd_extractor.py  test_xsd_fixes.py  test_xsd_parser.py
tests/test_anonymize/: conftest.py  test_as_number_rule.py  test_community_rule.py  test_config.py  test_description_rule.py  test_group_rule.py  test_identity_rule.py  test_integration.py  test_ip_rule.py  test_non_overlap.py  test_password_rule.py  test_path_filter.py  test_revert.py  test_sensitive_word_rule.py  test_ssh_key_rule.py  test_walker.py
tests/test_edityaml/: test_ansibilize.py  test_apply_rules.py  test_cli.py  test_path_walker.py  test_rules.py  test_transforms.py
(+57 files in other folders)
